- Reduced damage randomness by modifying weapon damage and implementing a new Percentage based armor system. - Updated all NPCs to the new armor system. - Reduced the parry chance from half the Parrying skill to one third. - The .fixitemsonmerchants command now also fixes those in player merchants. - Updated the Tooltip Data script to show some more info. I hope this helps clarify things instead of stirring the confusion even more. - Henchman script was doing strange things for determining AR, which screwed up a lot of things. Fixed. - Merchant Gate to Dungeon Deceit was underground. Fixed. - The IsMagicalItem() function was not detecting the magic musical instruments. This impacts on several things. Fixed. - Added the colored scales, they can now be carved from several reptilian monsters. - Added the Dragon Armor to the Tailoring craft menus.

--- a/099/pkg/npcs/hostiles/dragons/npc_lootgroups.cfg
+++ b/099/pkg/npcs/hostiles/dragons/npc_lootgroups.cfg
@@ -40,6 +40,8 @@ lootgroup drake1
 
 lootgroup carve_drake1
 {
+	Item		yellowscale			12		50
+	Item		redscale			12		50
 	Item		redhide			12		100
 }
 
@@ -64,6 +66,8 @@ lootgroup drake2
 
 lootgroup carve_drake2
 {
+	Item		yellowscale			12		50
+	Item		redscale			12		50
 	Item		redhide			12		100
 }
 
@@ -89,6 +93,7 @@ lootgroup frostdrake
 
 lootgroup carve_frostdrake
 {
+	Item		silverscale			12		100
 	Item		redhide			12		100
 }
 
@@ -110,6 +115,11 @@ lootgroup spectraldrake
 	magic_group	allweapons		12
 	magic_group	allarmor			12
 	magic_group	clothing			6
+}
+
+lootgroup carve_spectraldrake
+{
+	Item		blackscale			12		100
 }
 
 lootgroup dragon1
@@ -143,6 +153,8 @@ lootgroup dragon1
 
 lootgroup carve_dragon1
 {
+	Item		yellowscale			20		50
+	Item		redscale			20		50
 	Item		redhide			20		100
 }
 
@@ -176,6 +188,8 @@ lootgroup dragon2
 
 lootgroup carve_dragon2
 {
+	Item		yellowscale			12		50
+	Item		redscale			12		50
 	Item		redhide			20		100
 }
 
@@ -206,6 +220,8 @@ lootgroup greatdragon1
 
 lootgroup carve_greatdragon1
 {
+	Item		yellowscale			12		50
+	Item		redscale			12		50
 	Item		redhide			20		100
 }
 
@@ -236,6 +252,11 @@ lootgroup greatdragon2
 
 lootgroup carve_greatdragon2
 {
+	Item		yellowscale			20		20
+	Item		redscale			20		20
+	Item		blackscale			20		20
+	Item		bluescale			20		20
+	Item		greenscale			20		20	
 	Item		redhide			20		100
 }
 
@@ -269,6 +290,8 @@ lootgroup royaldragon1
 
 lootgroup carve_royaldragon1
 {
+	Item		bluescale			20		100
+	Item		redscale			20		100	
 	Item		redhide			20		100
 }
 
@@ -302,6 +325,8 @@ lootgroup royaldragon2
 
 lootgroup carve_royaldragon2
 {
+	Item		silverscale			20		100
+	Item		redscale			20		100
 	Item		redhide			20		100
 }
 
@@ -335,6 +360,8 @@ lootgroup ancientdragon1
 
 lootgroup carve_ancientdragon1
 {
+	Item		yellowscale			20		100
+	Item		redscale			20		100
 	Item		redhide			20		100
 }
 
@@ -368,6 +395,8 @@ lootgroup ancientdragon2
 
 lootgroup carve_ancientdragon2
 {
+	Item		blackscale			20		100
+	Item		bluescale			20		100
 	Item		redhide			20		100
 }
 
@@ -393,6 +422,8 @@ lootgroup wyvern
 
 lootgroup carve_wyvern
 {
+	Item		yellowscale			15		100
+	Item		greenscale			15		100	
 	Item		redhide			15		100
 }
 
@@ -413,6 +444,8 @@ lootgroup lesserwyrm
 
 lootgroup carve_lesserwyrm
 {
+	Item		yellowscale			10		100
+	Item		greenscale			10		100	
 	Item		Greenhide			20		100
 }
 
@@ -433,6 +466,8 @@ lootgroup seaserpent
 
 lootgroup carve_seaserpent
 {
+	Item		bluescale			10		100
+	Item		greenscale			10		100	
 	Item		Greenhide			20		100
 }
 
