--- a/099/pkg/npcs/hostiles/dragons/npcdesc.cfg
+++ b/099/pkg/npcs/hostiles/dragons/npcdesc.cfg
@@ -44,7 +44,7 @@ NpcTemplate rocklizard
 	AttackHitScript	:npchitscripts:defaulthitscript
 	AttackHitSound		0x5E
 	AttackMissSound	0x239
-	AR				15
+	AR				38
 
 	Tactics			100
 	Wrestling			130
@@ -61,7 +61,7 @@ NpcTemplate firelizard
 {
 	Name			a fire lizard
 	script		:hostiles:ai_killpcs_normal_firebreather
-	ObjType		0xca
+	ObjType		0xce
 	Color		0x075a
 	TrueColor		0x075a
 	Gender		0
@@ -78,7 +78,7 @@ NpcTemplate firelizard
 	AttackHitScript	:npchitscripts:defaulthitscript
 	AttackHitSound		0x5E
 	AttackMissSound	0x239
-	AR				15
+	AR				38
 
 	MagicResistance	80
 	Tactics			100
@@ -116,7 +116,7 @@ NpcTemplate drake1
 	AttackHitSound		0x16D
 	AttackMissSound	0x239
 	DeathSound		0x16f
-	AR				30
+	AR				60
 
 	Tactics			80
 	Wrestling			100
@@ -154,7 +154,7 @@ NpcTemplate drake2
 	AttackHitSound		0x16D
 	AttackMissSound	0x239
 	DeathSound		0x16f
-	AR				30
+	AR				60
 
 	Tactics			80
 	Wrestling			100
@@ -191,7 +191,7 @@ NpcTemplate frostdrake
 	AttackHitSound		0x16D
 	AttackMissSound	0x239
 	DeathSound		0x16f
-	AR				25
+	AR				50
 
 	MagicResistance	90
 	Tactics			130
@@ -227,7 +227,7 @@ NpcTemplate spectraldrake
 	AttackHitSound		0x16D
 	AttackMissSound	0x239
 	DeathSound		0x16f
-	AR				30
+	AR				60
 
 	Tactics				120
 	Wrestling				140
@@ -272,7 +272,7 @@ NpcTemplate dragon1
 	AttackHitSound		0x16D
 	AttackMissSound	0x239
 	DeathSound		0x16f
-	AR				30
+	AR				60
 
 	MagicResistance	120
 	Tactics			100
@@ -312,7 +312,7 @@ NpcTemplate dragon2
 	AttackHitSound		0x16D
 	AttackMissSound	0x239
 	DeathSound		0x16f
-	AR				30
+	AR				60
 
 	MagicResistance	120
 	Tactics			100
@@ -353,7 +353,7 @@ NpcTemplate dragon3
 	AttackHitSound		0x16D
 	AttackMissSound	0x16E
 	DeathSound		0x16F
-	AR				40
+	AR				70
 
 	MagicResistance	120
 	Tactics			100
@@ -392,7 +392,7 @@ NpcTemplate dragon4
 	AttackHitSound		0x16D
 	AttackMissSound	0x16E
 	DeathSound		0x16F
-	AR				40
+	AR				70
 
 	MagicResistance	120
 	Tactics			100
@@ -430,7 +430,7 @@ NpcTemplate greatdragon1
 	AttackHitSound		0x16D
 	AttackMissSound	0x16E
 	DeathSound		0x16F
-	AR				40
+	AR				70
 
 	MagicResistance	120
 	Tactics			100
@@ -469,7 +469,7 @@ NpcTemplate greatdragon2
 	AttackHitSound		0x16D
 	AttackMissSound	0x16E
 	DeathSound		0x16F
-	AR				40
+	AR				70
 
 	MagicResistance	120
 	Tactics			100
@@ -508,7 +508,7 @@ NpcTemplate royaldragon1
 	AttackHitSound		0x16D
 	AttackMissSound	0x16E
 	DeathSound		0x16F
-	AR				40
+	AR				70
 
 	MagicResistance	120
 	Tactics			100
@@ -546,7 +546,7 @@ NpcTemplate royaldragon2
 	AttackHitSound		0x16D
 	AttackMissSound	0x16E
 	DeathSound		0x16F
-	AR				40
+	AR				70
 
 	MagicResistance	120
 	Tactics			100
@@ -584,7 +584,7 @@ NpcTemplate ancientdragon1
 	AttackHitSound		0x16D
 	AttackMissSound	0x16E
 	DeathSound		0x16F
-	AR				40
+	AR				70
 
 	MagicResistance	140
 	Tactics			100
@@ -622,7 +622,7 @@ NpcTemplate ancientdragon2
 	AttackHitSound		0x16D
 	AttackMissSound	0x16E
 	DeathSound		0x16F
-	AR				40
+	AR				70
 
 	MagicResistance	140
 	Tactics			100
@@ -641,10 +641,10 @@ NpcTemplate wyvern
 {
 	Name			a wyvern
 	script		:hostiles:ai_killpcs_normal_default
-	ObjType		0x60
+	ObjType		62
 	Color		0
 	TrueColor		0
-//	colorrange	1801		1850
+	colorrange	1801		1850
 	Gender		0
 	STR			400
 	INT			65
@@ -659,7 +659,7 @@ NpcTemplate wyvern
 	AttackHitScript	:npchitscripts:defaulthitscript
 	AttackHitSound		0x16D
 	AttackMissSound	0x239
-	AR				30
+	AR				60
 
 	Tactics			80
 	Wrestling			100
@@ -676,7 +676,7 @@ NpcTemplate lesserwyrm
 {
 	Name			a lesser wyrm
 	script		:hostiles:ai_killpcs_normal_default
-	ObjType		0x96
+	ObjType		62
 	Color		2001
 	TrueColor		2001
 	colorrange	2001		2018
@@ -694,7 +694,7 @@ NpcTemplate lesserwyrm
 	AttackHitScript	:npchitscripts:defaulthitscript
 	AttackHitSound		0x1C1
 	AttackMissSound	0x239
-	AR				35
+	AR				65
 
 	Tactics			100
 	Wrestling			180
@@ -730,7 +730,7 @@ NpcTemplate seaserpent
 	AttackHitScript	:npchitscripts:defaulthitscript
 	AttackHitSound		0x1C1
 	AttackMissSound	0x239
-	AR				35
+	AR				65
 
 	Tactics			100
 	Wrestling			180
@@ -766,7 +766,7 @@ NpcTemplate tentaclebeast
 	AttackHitScript	:npchitscripts:defaulthitscript
 	AttackHitSound		0x164
 	AttackMissSound	0x239
-	AR				30
+	AR				60
 
 	Tactics			100
 	Wrestling			120
@@ -799,7 +799,7 @@ NpcTemplate leviathan
 	AttackHitScript	:npchitscripts:defaulthitscript
 	AttackHitSound		0x16D
 	AttackMissSound	0x239
-	AR				40
+	AR				70
 
 	MagicResistance		150
 	EvaluatingIntelligence	80
