--- a/099/pkg/npcs/hostiles/vampires/npc_lootgroups.cfg
+++ b/099/pkg/npcs/hostiles/vampires/npc_lootgroups.cfg
@@ -187,6 +187,11 @@ lootgroup undeaddragon
 	magic_group	clothing			12
 }
 
+lootgroup carve_undeaddragon
+{
+	Item		blackscale			20		100
+}
+
 lootgroup vampiricserpent
 {
 	Item		SerpentScales		1d3		50
