--- a/099/pkg/skills/craftingskills/tailoring/config/TailMenu.cfg
+++ b/099/pkg/skills/craftingskills/tailoring/config/TailMenu.cfg
@@ -157,6 +157,13 @@ Craftitem Britannian Armor
 	Item	FemaleStudded
 	Item	StuddedBustier
 	Item	LeatherShorts
+	Item	DragonHelm
+	Item	DragonGorget
+	Item	DragonGloves
+	Item	DragonSleeves
+	Item	DragonLeggings
+	Item	DragonBreastplate
+	
 }
 
 Craftitem Tokuno Armor
