--- a/099/pkg/skills/craftingskills/tailoring/config/tailoring.cfg
+++ b/099/pkg/skills/craftingskills/tailoring/config/tailoring.cfg
@@ -1610,3 +1610,95 @@ leather 0x457e
 	retain	1
 }
 
+///////////
+// SCALE
+///////////
+scale 0x2641
+{ 
+	Name			dragon breastplate
+	material		30
+	type			scale
+	material2		30
+	type2		hide
+	skill		90
+	time			4
+	Exceptional	1
+	bulk_deed		0
+	mark			1
+	retain		1
+}
+
+scale 0x2647
+{ 
+	Name			dragon leggings
+	material		25
+	type			scale
+	material2		25
+	type2		hide
+	skill		85
+	time			4
+	Exceptional	1
+	bulk_deed		0
+	mark			1
+	retain		1
+}
+
+scale 0x2657
+{ 
+	Name			dragon sleeves
+	material		20
+	type			scale
+	material2		20
+	type2		hide
+	skill		80
+	time			4
+	Exceptional	1
+	bulk_deed		0
+	mark			1
+	retain		1
+}
+
+scale 0x2643
+{ 
+	Name			dragon gloves
+	material		8
+	type			scale
+	material2		8
+	type2		hide
+	skill		75
+	time			3
+	Exceptional	1
+	bulk_deed		0
+	mark			1
+	retain		1
+}
+
+scale 0X264b
+{ 
+	Name			dragon gorget
+	material		8
+	type			scale
+	material2		8
+	type2		hide
+	skill		75
+	time			3
+	Exceptional	1
+	bulk_deed		0
+	mark			1
+	retain		1
+}
+
+scale 0x2645
+{ 
+	Name			dragon helm
+	material		15
+	type			scale
+	material2		15
+	type2		hide
+	skill		80
+	time			3
+	Exceptional	1
+	bulk_deed		0
+	mark			1
+	retain		1
+}
