--- a/trunk/099/pkg/npcs/animals/wild_animals/npc_lootgroups.cfg
+++ b/trunk/099/pkg/npcs/animals/wild_animals/npc_lootgroups.cfg
@@ -99,16 +99,19 @@ lootgroup carve_toad
 
 lootgroup carve_forestostard
 {
+	Item		greenscale			8		100
 	Item		greenhide			8		100
 }
 
 lootgroup carve_desertostard
 {
+	Item		greenscale			10		100
 	Item		greenhide			10		100
 }
 
 lootgroup carve_frenziedostard
 {
+	Item		greenscale			12		100
 	Item		greenhide			12		100
 }
 
@@ -151,11 +154,13 @@ lootgroup snake
 
 lootgroup carve_giant_serpent
 {
+	Item		silverscale		8		100
 	Item		silverhide		8		100
 }
 
 lootgroup carve_alligator
 {
+	Item		greenscale			8		100
 	Item		Greenhide			8		100
 }
 
@@ -166,6 +171,7 @@ lootgroup boglizard
 
 lootgroup carve_boglizard
 {
+	Item		greenscale			8		100
 	Item		Greenhide			8		100
 }
 
