--- a/trunk/099/pkg/npcs/hostiles/lizardmen/npc_lootgroups.cfg
+++ b/trunk/099/pkg/npcs/hostiles/lizardmen/npc_lootgroups.cfg
@@ -78,6 +78,7 @@ lootgroup lizardmansubjugator
 
 lootgroup carve_lizardmansubjugator
 {
+	Item		greenscale			6		100
 	Item		GreenHide			6		100
 }
 
@@ -101,6 +102,7 @@ lootgroup lizardmanoverseer
 
 lootgroup carve_lizardmanoverseer
 {
+	Item		greenscale			6		100
 	Item		GreenHide			6		100
 }
 
@@ -204,6 +206,7 @@ lootgroup lizardmanassassin
 
 lootgroup carve_lizardmanassassin
 {
+	Item		greenscale			6		100
 	Item		GreenHide			6		100
 }
 
@@ -230,6 +233,7 @@ lootgroup lizardmanking
 
 lootgroup carve_lizardmanking
 {
+	Item		greenscale			6		100
 	Item		GreenHide				6		100
 }
 
