--- a/trunk/099/pkg/npcs/hostiles/ophidians/npc_lootgroups.cfg
+++ b/trunk/099/pkg/npcs/hostiles/ophidians/npc_lootgroups.cfg
@@ -20,6 +20,7 @@ lootgroup ophidianwarrior
 
 lootgroup carve_ophidianwarrior
 {
+	Item		greenscale			6		100
 	Item		hide				6		100
 }
 
@@ -44,6 +45,7 @@ lootgroup ophidianavenger
 
 lootgroup carve_ophidianavenger
 {
+	Item		greenscale			6		100
 	Item		hide				6		100
 }
 
@@ -68,6 +70,7 @@ lootgroup ophidianexecutioner
 
 lootgroup carve_ophidianexecutioner
 {
+	Item		greenscale			6		100
 	Item		hide				6		100
 }
 
@@ -94,6 +97,7 @@ lootgroup ophidiandeathguard
 
 lootgroup carve_ophidiandeathguard
 {
+	Item		greenscale			6		100
 	Item		hide				6		100
 }
 
@@ -125,6 +129,7 @@ lootgroup ophidianmage
 
 lootgroup carve_ophidianmage
 {
+	Item		greenscale			6		100
 	Item		hide				6		100
 }
 
@@ -157,6 +162,7 @@ lootgroup ophidianmagi
 
 lootgroup carve_ophidianmagi
 {
+	Item		greenscale			6		100
 	Item		hide				6		100
 }
 
@@ -188,6 +194,7 @@ lootgroup ophidianmatriarch
 
 lootgroup carve_ophidianmatriarch
 {
+	Item		silverscale			6		100
 	Item		silverhide			6		100
 }
 
@@ -223,6 +230,7 @@ lootgroup ophidianqueen
 
 lootgroup carve_ophidianqueen
 {
+	Item		silverscale			10		100
 	Item		silverhide			10		100
 }
 
