--- a/trunk/099/pkg/npcs/hostiles/overlandmobs/npc_lootgroups.cfg
+++ b/trunk/099/pkg/npcs/hostiles/overlandmobs/npc_lootgroups.cfg
@@ -5,7 +5,7 @@
 lootgroup ent
 {
 	gold		3d75+50
-	Item		Deadwood			3		100
+	Item		Deadwood			10		100
 	Item		log				20		100
 	Item		Level2map			1		1
 	Item		entwood			1		100
@@ -21,7 +21,7 @@ lootgroup ent
 lootgroup reaper
 {
 	gold		3d100+50
-	Item		Deadwood			3		100
+	Item		Deadwood			10		100
 	Item		log				20		100
 	Item		ExecutionersCap	1d3		50
 	Item		reaperwood		1		100
@@ -39,6 +39,7 @@ lootgroup corpser
 {
 	gold		2d75
 	Item		Brimstone			1		100
+	Item		Deadwood			10		100
 	Random	Junk				1d3-1	50
 
 	magic_quality	6
@@ -52,6 +53,7 @@ lootgroup mongbat
 {
 	gold		5d10+25
 	Item		Blackmoor			1		100
+	Item		Deadwood			3		100
 	Item		Batwing			2		100
 	Random	Junk				1d3-1	50
 
@@ -65,6 +67,7 @@ lootgroup imp
 {
 	gold		2d50+50
 	Item		Blackmoor			1		100
+	Item		Deadwood			3		100
 	Item		Batwing			2		100
 	Random	Junk				1d3		50
 
@@ -78,6 +81,7 @@ lootgroup gremlin
 {
 	gold		2d50+50
 	Item		Blackmoor			1		100
+	Item		Deadwood			3		100
 	Item		Batwing			2		100
 	Random	Junk				1d3-1	50
 
@@ -93,6 +97,7 @@ lootgroup gazer
 	Item		bloodspawn		3		100
 	Item		Level2map			1		1
 	Item		Nightshade		2d10		50
+	Item		Deadwood			2d3		100
 	Random	Circle5Scrolls		1		25
 	Random	Circle6Scrolls		1		10
 	Random	NecroScrolls		1		5
@@ -111,6 +116,7 @@ lootgroup frostgazer
 	Item		bloodspawn		3		100
 	Item		Level2map			1		1
 	Item		Nightshade		2d10		50
+	Item		Deadwood			2d3		100
 	Random	Circle5Scrolls		1		25
 	Random	Circle6Scrolls		1		10
 	Random	NecroScrolls		1		5
@@ -184,6 +190,7 @@ lootgroup gargoyle
 {
 	gold		2d75+50
 	Item		ExecutionersCap	3		100
+	Item		Deadwood			3		100
 	Item		level2map			1		1
 	Random	Circle5Scrolls		1		10
 	Random	Circle6Scrolls		1		10
@@ -202,6 +209,7 @@ lootgroup stonegargoyle
 {
 	gold		2d75+50
 	Item		ExecutionersCap	3		100
+	Item		Deadwood			3		100
 	Item		level2map			1		1
 	Random	Circle5Scrolls		1		10
 	Random	Circle6Scrolls		1		10
@@ -220,6 +228,7 @@ lootgroup flamegargoyle
 {
 	gold		2d75+50
 	Item		ExecutionersCap	3		100
+	Item		Deadwood			3		100
 	Item		Brimstone			1d3		50
 	Item		level2map			1		1
 	Random	Circle5Scrolls		1		10
@@ -239,6 +248,7 @@ lootgroup frostgargoyle
 {
 	gold		2d75+50
 	Item		ExecutionersCap	3		100
+	Item		Deadwood			3		100
 	Item		level2map			1		1
 	Random	Circle5Scrolls		1		10
 	Random	Circle6Scrolls		1		10
