--- a/trunk/099/pkg/npcs/hostiles/shabooli/npc_lootgroups.cfg
+++ b/trunk/099/pkg/npcs/hostiles/shabooli/npc_lootgroups.cfg
@@ -43,6 +43,7 @@ lootgroup shabooliwarlock
 {
 	gold		4d50
 	Item		VialOfBlood		2		100
+	Item		Deadwood		3d8		100
 	Item		FishingNet		1		3
 	Item		druidstaff		1		5
 	Random	Gems				1d2		20
@@ -58,6 +59,7 @@ lootgroup shabooliwitchdoctor
 {
 	gold		4d50+20
 	Item		VialOfBlood		2		100
+	Item		Deadwood		3d8		100
 	Item		FishingNet		1		3
 	Item		druidstaff		1		5
 	Random	Gems				1d3		30
