--- a/trunk/099/pkg/npcs/hostiles/undead/npc_lootgroups.cfg
+++ b/trunk/099/pkg/npcs/hostiles/undead/npc_lootgroups.cfg
@@ -348,6 +348,11 @@ lootgroup shadow_dragon
 	magic_group	clothing			12
 }
 
+lootgroup carve_shadowdragon
+{
+	Item		blackscale			20		100
+}
+
 lootgroup wraith
 {
 	gold		2d100+50
