--- a/trunk/099/pkg/skills/craftingskills/tailoring/itemdesc.cfg
+++ b/trunk/099/pkg/skills/craftingskills/tailoring/itemdesc.cfg
@@ -215,3 +215,69 @@ Item 0x2DDA
 	Name		elvenspinningwheel2
 	Desc		elven spinning wheel
 }
+
+
+////////////////
+// scales
+////////////////
+
+Item 0x26b1
+{
+	Name				silverscale
+	Desc				silver scale%s
+	Type				scale
+	Weight			1/10
+	Color				0x8fd
+	VendorBuysFor		10
+}
+
+Item 0x26b2
+{
+	Name				blackscale
+	Desc				black scale%s
+	Type				scale
+	Weight			1/10
+	Color				0x0455
+	VendorBuysFor		10
+}
+
+Item 0x26b3
+{
+	Name				redscale
+	Desc				red scale%s
+	Type				scale
+	Weight			1/10
+    	Color				0x066d
+	VendorBuysFor		10
+}
+
+Item 0x26b4
+{
+	Name				bluescale
+	Desc				blue scale%s
+	Type				scale
+	Weight			1/10
+	Color				0x08b0
+	VendorBuysFor		10
+}
+
+Item 0x26b5
+{
+	Name				greenscale
+	Desc				green scale%s
+	Type				scale
+	Weight			1/10
+    	Color				0x0851
+	VendorBuysFor		10
+}
+
+Item 0x26b6
+{
+	Name				yellowscale
+	Desc				yellow scale%s
+	Type				scale
+	Weight			1/10
+    	Color				0x08a8
+	VendorBuysFor		10
+}
+
