--- a/trunk/099/pkg/combat/weapons/itemdesc.cfg
+++ b/trunk/099/pkg/combat/weapons/itemdesc.cfg
@@ -1003,6 +1003,7 @@ Weapon 0x13B2
 	HitSound			0x3a3
 	MaxHP			120
 	MinRange			0
+	MaxRange			25
 	VendorSellsFor		40
 	VendorBuysFor		22
 	blockcircle		1
@@ -1030,10 +1031,12 @@ Weapon 0x0f4f
 	MissSound			0x239
 	MaxHP			120
 	MinRange			0
+	MaxRange			25
 	VendorSellsFor		80
 	VendorBuysFor		27
 	blockcircle		1
 	TwoHanded			1
+	HeavyCritical		1
 	script			:combat:equipitem
 	equipscript		:combat:item_equip
 	unequipscript		:combat:item_unequip
@@ -1056,6 +1059,7 @@ Weapon 0x13fd
 	MissSound			0x239
 	MaxHP			120
 	MinRange			0
+	MaxRange			25
 	VendorSellsFor		100
 	VendorBuysFor		33
 	blockcircle		1
@@ -1086,6 +1090,7 @@ Weapon 0x16050
 	HitSound			0x235
 	MaxHP			100
 	MinRange			0
+	MaxRange			25
 	VendorSellsFor		1200
 	blockcircle		1
 	TwoHanded			1
@@ -1388,6 +1393,7 @@ Weapon 0x26c2
 	HitSound			0x235
 	MaxHP			150
 	MinRange			0
+	MaxRange			25
 	VendorSellsFor		90
 	VendorBuysFor		30
 	blockcircle		1
@@ -1414,6 +1420,7 @@ Weapon 0x26c3
 	MissSound			0x239
 	MaxHP			150
 	MinRange			0
+	MaxRange			25
 	VendorSellsFor		100
 	VendorBuysFor		33
 	blockcircle		1
@@ -1677,6 +1684,7 @@ Weapon 0x27f0
 	HitSound			0x235
 	MaxHP			150
 	MinRange			0
+	MaxRange			25
 	VendorSellsFor		120
 	VendorBuysFor		40
 	blockcircle		1
@@ -1762,6 +1770,7 @@ Weapon 0x27db
 	blockcircle		1
 	MinRange			0
 	MaxRange			15
+	HeavyCritical		1
 	script			:combat:equipitem
 	equipscript		:combat:item_equip
 	unequipscript		:combat:item_unequip
@@ -2000,6 +2009,7 @@ Weapon 0x2d2a
 	HitSound			0x235
 	MaxHP			150
 	MinRange			0
+	MaxRange			25
 	VendorSellsFor		150
 	VendorBuysFor		50
 	blockcircle		1
@@ -2027,6 +2037,7 @@ Weapon 0x2d2b
 	HitSound			0x235
 	MaxHP			150
 	MinRange			0
+	MaxRange			25
 	VendorSellsFor		135
 	VendorBuysFor		45
 	blockcircle		1
@@ -2788,6 +2799,7 @@ Weapon 0x406b
 	blockcircle		1
 	MinRange			0
 	MaxRange			15
+	HeavyCritical		1
 	script			:combat:equipitem
 	equipscript		:combat:item_equip
 	unequipscript		:combat:item_unequip
