--- a/trunk/099/pkg/items/containers/itemdesc.cfg
+++ b/trunk/099/pkg/items/containers/itemdesc.cfg
@@ -24,6 +24,7 @@ Container 0x0E7C
 	MinY				100
 	MaxY				150
 	RequiresAttention	0
+	Weight			5
 	MaxItems			65535
 	Maxweight			65535
 	OnRemoveScript		onremove_chest
@@ -41,6 +42,7 @@ Container 0x09ab
 	MinY				100
 	MaxY				150
 	RequiresAttention	0
+	Weight			5
 	MaxItems			65535
 	Maxweight			65535
 	OnRemoveScript		onremove_chest
@@ -58,7 +60,7 @@ Container 0x0E40
 	MinY				100
 	MaxY				150
 	RequiresAttention	0
-	Weight			10
+	Weight			5
 	MaxItems			65535
 	Maxweight			65535
 	OnRemoveScript		onremove_chest
@@ -76,7 +78,7 @@ Container 0x0E41
 	MinY				100
 	MaxY				150
 	RequiresAttention	0
-	Weight			10
+	Weight			5
 	MaxItems			65535
 	Maxweight			65535
 	OnRemoveScript		onremove_chest
@@ -371,6 +373,7 @@ Container 0x0E80
 	MinY				20
 	MaxY				80
 	RequiresAttention	0
+	Weight			1
 	MaxItems			65535
 	Maxweight			65535
 	OnRemoveScript		onremove_chest
@@ -388,6 +391,7 @@ Container 0x09a8
 	MinY				20
 	MaxY				80
 	RequiresAttention	0
+	Weight			1
 	MaxItems			65535
 	Maxweight			65535
 	OnRemoveScript		onremove_chest
@@ -1521,7 +1525,7 @@ Container 0x4025
 	MinY				100
 	MaxY				150
 	RequiresAttention	0
-	Weight			10
+	Weight			5
 	MaxItems			65535
 	Maxweight			65535
 	OnRemoveScript		onremove_chest
@@ -1655,7 +1659,7 @@ Container 0x4102
 	MinY				100
 	MaxY				150
 	RequiresAttention	0
-	Weight			10
+	Weight			5
 	MaxItems			65535
 	Maxweight			65535
 	OnRemoveScript		onremove_chest
@@ -1674,7 +1678,7 @@ Container 0x4106
 	MinY				100
 	MaxY				150
 	RequiresAttention	0
-	Weight			10
+	Weight			5
 	MaxItems			65535
 	Maxweight			65535
 	OnRemoveScript		onremove_chest
@@ -1713,6 +1717,63 @@ Container 0x4144
 	MaxY				150
 	RequiresAttention	0
 	Weight			5
+	MaxItems			65535
+	Maxweight			65535
+	OnRemoveScript		onremove_chest
+	CanRemoveScript	canremove_chest
+	OnInsertScript		oninsert_chest
+	CanInsertScript	caninsert_chest
+}
+
+Container 0x49c8
+{
+	Name				TallValentineBox
+	Desc				Valentine's Day Present
+	Gump				0x011a
+	MinX				20
+	MaxX				100
+	MinY				100
+	MaxY				150
+	RequiresAttention	0
+	Weight			1
+	MaxItems			65535
+	Maxweight			65535
+	OnRemoveScript		onremove_chest
+	CanRemoveScript	canremove_chest
+	OnInsertScript		oninsert_chest
+	CanInsertScript	caninsert_chest
+}
+
+Container 0x49ca
+{
+	Name				HeartShapedValentineBox
+	Desc				Valentine's Day Present
+	Gump				0x0120
+	MinX				20
+	MaxX				100
+	MinY				100
+	MaxY				150
+	RequiresAttention	0
+	Weight			1
+	MaxItems			65535
+	Maxweight			65535
+	OnRemoveScript		onremove_chest
+	CanRemoveScript	canremove_chest
+	OnInsertScript		oninsert_chest
+	CanInsertScript	caninsert_chest
+}
+
+Container 0x49cc
+{
+	Name				BeatingHeartShapedValentineBox
+	Desc				Valentine's Day Present
+	Gump				0x0120
+	MinX				20
+	MaxX				100
+	MinY				100
+	MaxY				150
+	RequiresAttention	0
+	Weight			1
 	MaxItems			65535
 	Maxweight			65535
 	OnRemoveScript		onremove_chest
