--- a/trunk/099/pkg/items/decorations/itemdesc.cfg
+++ b/trunk/099/pkg/items/decorations/itemdesc.cfg
@@ -1822,4 +1822,28 @@ Item  0xb02e
 	Script		placedeed
 }
 
+Item  0xB034
+{
+	Name			ValentineBearDeed
+	Desc			Valentine Bear deed
+	Graphic		0x14EF
+	Color		42
+	script		valentinebeardeed
+	weight		1
+}
 
+Item 0x48e0
+{
+	Name			ValentinePandaBear
+	Desc			Valentine's Day Panda Bear
+	script		rotate
+	weight		1
+}
+
+Item 0x48e2
+{
+	Name			ValentinePolarBear
+	Desc			Valentine's Day Polar Bear
+	script		rotate
+	weight		1
+}
