--- a/trunk/099/pkg/npcs/townfolk/healer/npcdesc.cfg
+++ b/trunk/099/pkg/npcs/townfolk/healer/npcdesc.cfg
@@ -30,6 +30,9 @@ NpcTemplate healer
 	AR				50
 
 	Wrestling 			100
+	Swordsmanship 			100
+	Fencing 			100
+	Macefighting 			100
 	EvaluatingIntelligence	100
 	Magery				120
 	MagicResistance		100
