--- a/099/pkg/items/decorations/rotate.cfg
+++ b/099/pkg/items/decorations/rotate.cfg
@@ -1869,5 +1869,28 @@ graphic 0x4144
 	newgraphic 0x4142
 }
 
+graphic 0x48e0
+{
+	//valentinepandabear
+	newgraphic 0x48e1
+}
+
+graphic 0x48e1
+{
+	//valentinepandabear
+	newgraphic 0x48e0
+}
+
+graphic 0x48e2
+{
+	//valentinepolarbear
+	newgraphic 0x48e3
+}
+
+graphic 0x48e3
+{
+	//valentinepolarbear
+	newgraphic 0x48e2
+}
 
 
