--- a/099/pkg/npcs/animals/wild_animals/npc_lootgroups.cfg
+++ b/099/pkg/npcs/animals/wild_animals/npc_lootgroups.cfg
@@ -152,6 +152,12 @@ lootgroup snake
 	Item		ExecutionersCap	1		100
 }
 
+lootgroup giant_serpent
+{
+	Item		SerpentScales		10		100
+	Item		ExecutionersCap	3		100
+}
+
 lootgroup carve_giant_serpent
 {
 	Item		silverscale		8		100
