--- a/099/pkg/skills/rogueskills/lockpicking/itemdesc.cfg
+++ b/099/pkg/skills/rogueskills/lockpicking/itemdesc.cfg
@@ -17,10 +17,14 @@ Container 0x17083
 	MaxX				60
 	MinY				20
 	MaxY				80
-	RequiresAttention	0
+	RequiresAttention		0
 	Movable			0
 	Weight			5
 	MaxItems			65535
 	Maxweight			65535
+	OnRemoveScript		:containers:onremove_chest
+	CanRemoveScript		:containers:canremove_chest
+	OnInsertScript		:containers:oninsert_chest
+	CanInsertScript		:containers:caninsert_chest
 //	OldObjtype		0x7083
 }
