--- a/trunk/099/pkg/npcs/hostiles/tokuno/npc_lootgroups.cfg
+++ b/trunk/099/pkg/npcs/hostiles/tokuno/npc_lootgroups.cfg
@@ -296,28 +296,29 @@ lootgroup carve_tsukiwolf
 
 lootgroup yamandon
 {    
-	gold		4d75+1500
-	Item		level5map			1		1
+	gold		4d75+5500
+	Item		level5map			1		10
 	Item		egg				2d3		50
 	Random	Gems				1d3		50
 	Random	Potions			1d3		50
 	Random	Junk				1d3		50
 
-	chest_chance	6
+	chest_chance	10
 	chest_quality	10
 
 	magic_quality	10
-	magic_group	wands			12
-	magic_group	allweapons		12
-	magic_group	allarmor			6
-	magic_group	studdedarmor		3
-	magic_group	platemailarmor		3
-	magic_group	clothing			6
+	magic_group	wands			120
+	magic_group	allweapons		120
+	magic_group	allarmor			60
+	magic_group	studdedarmor		30
+	magic_group	platemailarmor		30
+	magic_group	clothing			60
 }
 
 lootgroup carve_yamandon
 {
 	Item		silverhide			20		100
+	Item		silverscale			20		100
 }
 
 lootgroup yomotsuelder
