- Fixed some indentation in a few scripts. - Fixed an error where newly generated magic items with lost durability would have hit points over the maximum. - Some changes to NPC scripts to support higher levels of poison. - Combat scripts now have a check to fix an item's hit points when they exceed the maximum. - Fixed the .own command. It now properly adds the owner's name to the item name again. - Some objtype fixes to the .addflavortext command. - Some fixes to the search rectangles in the .getinfo command. - Fixes to drydock routines when an old ship is drydocked. - Mana stones now work properly when stacked. - More blocked locations added to Mark and Gate Travel. - The other slayer weapons now display the slayer info. - The nightmare is a little tougher now. - The Yamandon now gives better loot. - Added meleecaster property checks to tamed AI scripts. It makes the rune beetle more useful. - Hiryus speak like other dragons now. - Healing difficulty is now proportional. - Valentine's Day present creation function added to the logon script.

--- a/099/pkg/npcs/hostiles/tokuno/npc_lootgroups.cfg
+++ b/099/pkg/npcs/hostiles/tokuno/npc_lootgroups.cfg
@@ -296,28 +296,29 @@ lootgroup carve_tsukiwolf
 
 lootgroup yamandon
 {    
-	gold		4d75+1500
-	Item		level5map			1		1
+	gold		4d75+5500
+	Item		level5map			1		10
 	Item		egg				2d3		50
 	Random	Gems				1d3		50
 	Random	Potions			1d3		50
 	Random	Junk				1d3		50
 
-	chest_chance	6
+	chest_chance	10
 	chest_quality	10
 
 	magic_quality	10
-	magic_group	wands			12
-	magic_group	allweapons		12
-	magic_group	allarmor			6
-	magic_group	studdedarmor		3
-	magic_group	platemailarmor		3
-	magic_group	clothing			6
+	magic_group	wands			120
+	magic_group	allweapons		120
+	magic_group	allarmor			60
+	magic_group	studdedarmor		30
+	magic_group	platemailarmor		30
+	magic_group	clothing			60
 }
 
 lootgroup carve_yamandon
 {
 	Item		silverhide			20		100
+	Item		silverscale			20		100
 }
 
 lootgroup yomotsuelder
