--- a/099/pkg/npcs/hostiles/tokuno/npcdesc.cfg
+++ b/099/pkg/npcs/hostiles/tokuno/npcdesc.cfg
@@ -680,6 +680,7 @@ NpcTemplate runebeetle
 	tameskill			114
 	food				meat
 	istamedhealer		1
+	meleecaster		1
 	provoke			110
 	hostile			1
 	poison			immune
