--- a/trunk/099/pkg/npcs/hostiles/diablo/npc_lootgroups.cfg
+++ b/trunk/099/pkg/npcs/hostiles/diablo/npc_lootgroups.cfg
@@ -130,11 +130,16 @@ lootgroup hellhound
 }
 lootgroup blackwisp
 {
-	Item		diamond			1		100
-	Item		Level3map			1		3
-	Item		Level4map			1		2
-	Item		Level5map			1		1
+	gold		3d100+200
+	Item		diamond			3d5		100
+	Item		Level3map			1		4
+	Item		Level4map			1		3
+	Item		Level5map			1		2
 	Random	Junk				1D3		50
+	Random	Circle7Scrolls		2		25
+	Random	Circle8Scrolls		1		25
+	Random	NecroScrolls		1d3-1	10
+	Random	Gems				4d4		50
 
 	chest_chance	5
 	chest_quality	10
