--- a/trunk/099/pkg/npcs/hostiles/dragons/npcdesc.cfg
+++ b/trunk/099/pkg/npcs/hostiles/dragons/npcdesc.cfg
@@ -676,7 +676,7 @@ NpcTemplate lesserwyrm
 {
 	Name			a lesser wyrm
 	script		:hostiles:ai_killpcs_normal_default
-	ObjType		62
+	ObjType		0x96
 	Color		2001
 	TrueColor		2001
 	colorrange	2001		2018
@@ -697,7 +697,7 @@ NpcTemplate lesserwyrm
 	AR				65
 
 	Tactics			100
-	Wrestling			180
+	Wrestling			100
 	MagicResistance	80
 	Poisoning			80
 
