--- a/trunk/099/pkg/world/spawners/regionspawner/regionspawn.cfg
+++ b/trunk/099/pkg/world/spawners/regionspawner/regionspawn.cfg
@@ -558,7 +558,8 @@ region 66
 //fire dungeon catecombs
 region 67
 {
-	rect 5648 1296 5857 1392
+//	rect 5648 1296 5857 1392
+	rect 5648 1296 5761 1402
 	group dungeoncrap 4
 	group medterathan 18
 	group strongterathan 4
@@ -971,19 +972,22 @@ region 120
 //destard, level 1, entrance
 region 121
 {
-	rect 5180 870 5370 995
+	rect 5180 900 5370 995
 	group dungeoncrap		5
 	group weakophidians		20
 	group ophidians		5
 }
 
-//destard, level 1, back
+//destard, level 1, back, DISABLED, added Champion Spawn
 region 122
 {
 	rect 5180 770 5330 870
-	group weakophidians		6
-	group ophidians		16
-	group strongophidians	2
+//	group weakophidians		6
+//	group ophidians		16
+//	group strongophidians	2
+	group weakophidians		0
+	group ophidians		0
+	group strongophidians	0
 }
 
 //destard 2
