- Implemented "dragon" flag in npcdesc for use with slayer weapons. - Increased the loot for black wisp. - The lesser wyrms use sea serpent graphics again. Also, decreased their combat skill to 100, it was 180!! - Decreased the hit points and attack speed of the yamandon. - Henchmen should now heal themselves when stationary. - Fixed an objtype migration error in the function for giving a bulk order deed to a player. - Fixed some errors in Provocation and Stealing scripts in regards to flagging a player as criminal. - Added the mana stone to the Tinkering menu, no longer need to Modify the Elixer, it's straight from the menu. Also changed obsidian and porcelain to the top if the Magic submenu. - Updated the heal routines for healing npc elves and gargoyles. - Changed some spawns regions from Destard and Fire in preparation for Champion Spawns. - Added Champion Spawn scripts. - Added npctemplates for Semidar and Rikktor.

--- a/099/pkg/npcs/hostiles/diablo/npc_lootgroups.cfg
+++ b/099/pkg/npcs/hostiles/diablo/npc_lootgroups.cfg
@@ -130,11 +130,16 @@ lootgroup hellhound
 }
 lootgroup blackwisp
 {
-	Item		diamond			1		100
-	Item		Level3map			1		3
-	Item		Level4map			1		2
-	Item		Level5map			1		1
+	gold		3d100+200
+	Item		diamond			3d5		100
+	Item		Level3map			1		4
+	Item		Level4map			1		3
+	Item		Level5map			1		2
 	Random	Junk				1D3		50
+	Random	Circle7Scrolls		2		25
+	Random	Circle8Scrolls		1		25
+	Random	NecroScrolls		1d3-1	10
+	Random	Gems				4d4		50
 
 	chest_chance	5
 	chest_quality	10
