--- a/099/pkg/skills/craftingskills/tinkering/config/TinkMenu.cfg
+++ b/099/pkg/skills/craftingskills/tinkering/config/TinkMenu.cfg
@@ -150,6 +150,8 @@ Craftitem Utensils
 Craftitem Magic
 {
 	//Sub Selections
+	Item	obsidian
+	Item	porcelain
 	Item	golemtotem
 	Item	llamatotem
 	Item	steed1totem
@@ -166,10 +168,9 @@ Craftitem Magic
 	Item	Wand2
 	Item	Wand3
 	Item	Wand4
+	Item	manastone
 	Item	crystalball
 
-	Item	obsidian
-	Item	porcelain
 	Item    housetele1
 	Item    housetele2
 	Item    housetele3
