--- a/099/pkg/skills/craftingskills/tinkering/config/tinkering.cfg
+++ b/099/pkg/skills/craftingskills/tinkering/config/tinkering.cfg
@@ -1068,6 +1068,15 @@ tinkering 0x170b6
 	Difficulty2		90
 }
 
+tinkering 0x17082
+{
+	Name		a mana stone
+	parts		0xdc2b 0xf0f 0x1be9 1 10 1
+	skill		90
+	Assemble	1
+	stackable	1
+}
+
 tinkering 0x4073
 { 
 	Name			a gargish glass sword
