--- a/trunk/099/pkg/npcs/hostiles/tokuno/npcdesc.cfg
+++ b/trunk/099/pkg/npcs/hostiles/tokuno/npcdesc.cfg
@@ -735,11 +735,12 @@ NpcTemplate yamandon
 	STR			786
 	INT			101
 	DEX			230
-	HITS			786
+	CProp	BonusMaxHP i400
+	HITS			1186
 	MANA			101
 	STAM			230
 
-	AttackSpeed		10
+	AttackSpeed		25
 	AttackDamage		6d6+10
 	AttackAttribute	Wrestling
 	AttackHitScript	:npchitscripts:defaulthitscript
