--- a/trunk/099/pkg/npcs/hostiles/undead/npcdesc.cfg
+++ b/trunk/099/pkg/npcs/hostiles/undead/npcdesc.cfg
@@ -504,9 +504,9 @@ NpcTemplate mummy
 {
 	Name			a mummy
 	script		ai_undead_warrior
-	ObjType		0x03
-	Color		2101
-	TrueColor		2101
+	ObjType		154
+	Color		0
+	TrueColor		0
 	Gender		0
 	STR			160
 	INT			20
@@ -1010,9 +1010,9 @@ NpcTemplate shadow_dragon
 {
 	Name			an shadow dragon
 	script		ai_undead_warrior
-	ObjType		0xc
-	Color		0x4001
-	TrueColor		0x4001
+	ObjType		0x6a
+	Color		0
+	TrueColor		0
 	Gender		0
 	STR			400
 	INT			80
