- Some adjustments to Yamandon - Graphic change for mummies. - Semidar now uses Magic Reflect more often. - Adjusted nptdesc of Semidar to make her impossible to control with Control Undead. - The Champion Spawn Altars were being reactivated every 144 minutes instead of every 24 hours. After some thought I decided to make it 23 hours. - Casting spells now unhides the caster. - Animate Dead can't be used to raise Champions as zombies.

--- a/099/pkg/npcs/hostiles/tokuno/npcdesc.cfg
+++ b/099/pkg/npcs/hostiles/tokuno/npcdesc.cfg
@@ -735,11 +735,12 @@ NpcTemplate yamandon
 	STR			786
 	INT			101
 	DEX			230
-	HITS			786
+	CProp	BonusMaxHP i400
+	HITS			1186
 	MANA			101
 	STAM			230
 
-	AttackSpeed		10
+	AttackSpeed		25
 	AttackDamage		6d6+10
 	AttackAttribute	Wrestling
 	AttackHitScript	:npchitscripts:defaulthitscript
