- Orc helm now has a selling price - Looting with .grab command now takes half the time. - Small fix in AG timer for quests. - Quivers and Elven Quivers now weight only 1 stone. - Alchemy Symbols now weight only 1 stone, and can be moved. - Lit torches can now be sold. - Archery buttes are working again. Also fixed the animation when firing at them. - Fixed an error in lever scripts where the realm wasn't properly handled. - Druid bags and Codex Damnorum are now blessed. - Animate Dead now works properly again. - Item Tooltips now show flavor text. - Nightmare's TamingValue is now 5. - Lowered the amount of Deadwood given by some creatures. - Adjusted the fighting skills of the Bake Kitsune and Rune Beetle. - Lowered the Sailing duration of travel by Ship captain. - Some adjustments to pet retrieving scripts. - Player Merchants now handle Public Mall signs properly. - Added support for altering metal weapons to be used by gargoyles. - Arrows, Bolts, Darts, Shuriken and Throwing Axes have a selling price now. - Adjusted the Invasion Spawner timer. - Region Spawner had a crappy Z coordinate handling. Replaced it with a better and 100% working method. - No more snow stors, we have rain again. - Raised the maximum TamingValue allowed to a player. - Custom House Price is now properly handled. No longer will doors and teleporters be skipped in the cost calculation.

--- a/099/pkg/combat/armor/itemdesc.cfg
+++ b/099/pkg/combat/armor/itemdesc.cfg
@@ -910,6 +910,7 @@ Armor 0x1f0b
 	Coverage		Head
 	MaxHP		90
 	blockcircle	3
+	VendorBuysFor	16
 	script		:combat:equipitem
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
