--- a/099/pkg/items/housing/itemdesc.cfg
+++ b/099/pkg/items/housing/itemdesc.cfg
@@ -1077,83 +1077,95 @@ Item 0x181d
 {
 	Name			housetele1
 	WalkOnScript	housetele
-	Movable		0
+	Weight		1
+//	Movable		0
 }
 
 Item 0x181e
 {
 	Name			housetele2
 	WalkOnScript	housetele
-	Movable		0
+	Weight		1
+//	Movable		0
 }
 
 Item 0x181f
 {
 	Name			housetele3
 	WalkOnScript	housetele
-	Movable		0
+	Weight		1
+//	Movable		0
 }
 
 Item 0x1820
 {
 	Name			housetele4
 	WalkOnScript	housetele
-	Movable		0
+	Weight		1
+//	Movable		0
 }
 
 Item 0x1821
 {
 	Name			housetele5
 	WalkOnScript	housetele
-	Movable		0
+	Weight		1
+//	Movable		0
 }
 
 Item 0x1822
 {
 	Name			housetele6
 	WalkOnScript	housetele
-	Movable		0
+	Weight		1
+//	Movable		0
 }
 
 Item 0x1823
 {
 	Name			housetele7
 	WalkOnScript	housetele
-	Movable		0
+	Weight		1
+//	Movable		0
 }
 
 Item 0x1824
 {
 	Name			housetele8
 	WalkOnScript	housetele
-	Movable		0
+	Weight		1
+//	Movable		0
 }
 
 Item 0x1825
 {
 	Name			housetele9
 	WalkOnScript	housetele
-	Movable		0
+	Weight		1
+//	Movable		0
 }
 
 Item 0x1826
 {
 	Name			housetelea
 	WalkOnScript	housetele
-	Movable		0
+	Weight		1
+//	Movable		0
 }
 
 Item 0x1827
 {
 	Name			houseteleb
 	WalkOnScript	housetele
-	Movable		0
+	Weight		1
+//	Movable		0
 }
 
 Item 0x1828
 {
 	Name			housetelec
 	WalkOnScript	housetele
-	Movable		0
+	Weight		1
+//	Movable		0
 }
 
