--- a/099/pkg/magic/druid/itemdesc.cfg
+++ b/099/pkg/magic/druid/itemdesc.cfg
@@ -5,6 +5,7 @@ item 0x1706b
 	Graphic			0xe76
 	color			1819
 	Desc				bag of druid runes
+	Newbie			1
 	RequiresAttention	0
 //	OldObjtype		0x706b
 }
