--- a/099/pkg/magic/necro/itemdesc.cfg
+++ b/099/pkg/magic/necro/itemdesc.cfg
@@ -5,6 +5,7 @@ Item 0xA100
 	DecayTime		0
 	Script		codexdamnorum
 	graphic		0x1C13
+	Newbie		1
 	CProp		Lesser		i0
 	CProp		Greater		i0
 	RequiresAttention	0
