--- a/099/pkg/npcs/hostiles/overlandmobs/npc_lootgroups.cfg
+++ b/099/pkg/npcs/hostiles/overlandmobs/npc_lootgroups.cfg
@@ -1,4 +1,5 @@
 ///////////////////
+///////////////////
 //See the main npc_lootgroups in the /pkg/combat/loot package for the formatting of this file
 ///////////////////
 
@@ -53,7 +54,7 @@ lootgroup mongbat
 {
 	gold		5d10+25
 	Item		Blackmoor			1		100
-	Item		Deadwood			3		100
+	Item		Deadwood			1		50
 	Item		Batwing			2		100
 	Random	Junk				1d3-1	50
 
@@ -67,7 +68,7 @@ lootgroup imp
 {
 	gold		2d50+50
 	Item		Blackmoor			1		100
-	Item		Deadwood			3		100
+	Item		Deadwood			1		50
 	Item		Batwing			2		100
 	Random	Junk				1d3		50
 
@@ -81,7 +82,7 @@ lootgroup gremlin
 {
 	gold		2d50+50
 	Item		Blackmoor			1		100
-	Item		Deadwood			3		100
+	Item		Deadwood			1		50
 	Item		Batwing			2		100
 	Random	Junk				1d3-1	50
 
@@ -190,7 +191,7 @@ lootgroup gargoyle
 {
 	gold		2d75+50
 	Item		ExecutionersCap	3		100
-	Item		Deadwood			3		100
+	Item		Deadwood			1d3		100
 	Item		level2map			1		1
 	Random	Circle5Scrolls		1		10
 	Random	Circle6Scrolls		1		10
@@ -209,7 +210,7 @@ lootgroup stonegargoyle
 {
 	gold		2d75+50
 	Item		ExecutionersCap	3		100
-	Item		Deadwood			3		100
+	Item		Deadwood			1d3		100
 	Item		level2map			1		1
 	Random	Circle5Scrolls		1		10
 	Random	Circle6Scrolls		1		10
@@ -228,7 +229,7 @@ lootgroup flamegargoyle
 {
 	gold		2d75+50
 	Item		ExecutionersCap	3		100
-	Item		Deadwood			3		100
+	Item		Deadwood			1d3		100
 	Item		Brimstone			1d3		50
 	Item		level2map			1		1
 	Random	Circle5Scrolls		1		10
@@ -248,7 +249,7 @@ lootgroup frostgargoyle
 {
 	gold		2d75+50
 	Item		ExecutionersCap	3		100
-	Item		Deadwood			3		100
+	Item		Deadwood			1d3		100
 	Item		level2map			1		1
 	Random	Circle5Scrolls		1		10
 	Random	Circle6Scrolls		1		10
