--- a/trunk/099/config/servspecopt.cfg
+++ b/trunk/099/config/servspecopt.cfg
@@ -149,7 +149,7 @@ MaxPathFindRange=50
 # ethereal, you will have to set the mount piece to be color 0x4001 and then equip
 # it. And in order to do that, you will need an ItemColorMask of 0x4FFF.
 
-ItemColorMask=0x4FFF
+ItemColorMask=0xCFFF
 # Uncomment this if you want ethereal mounts and do not use older clients.
 
 UseWinLFH=1
